crates/plotnik-lib/tests/03-analyze/ref_resolution/multiple_undefined.txt
Q = (foo
  (X)
  (Y)
  (Z)
)
------------------ DIAGNOSTICS -------------------
error: `X` is not defined
 --> query.ptk:2:4
  |
2 |   (X)
  |    ^
  |
help: did you mean `(Q)`?
  |
2 -   (X)
2 +   (Q)
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling

error: `Y` is not defined
 --> query.ptk:3:4
  |
3 |   (Y)
  |    ^
  |
help: did you mean `(Q)`?
  |
3 -   (Y)
3 +   (Q)
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling

error: `Z` is not defined
 --> query.ptk:4:4
  |
4 |   (Z)
  |    ^
  |
help: did you mean `(Q)`?
  |
4 -   (Z)
4 +   (Q)
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling
-------------------- SYMBOLS ---------------------
Q
  X?
  Y?
  Z?
